discussion/kv_engine/181924/181924_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

AuditDescriptorManager::lookup return reference

Change-Id: Ic9bcd7d86949c17b1dcd78af6187a55c7cc35c4f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 06:41:46.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 06:55:22.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/248/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/248/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11246/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11246/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23549/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23549/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23958/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23958/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11337/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11337/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31974/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31974/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22978/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22978/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24790/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24790/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21516/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    event_filter.withWLock([&rewrittenEventFilterJson](auto& filter) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:155:16: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
             (*event_filter.rlock())->to_json().dump());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:284:14: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
    return (*event_filter.rlock())->clone();
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:119:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::unique_ptr<AuditEventFilter>> event_filter;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21516/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:149:5:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21516/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42583/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.h:119:5:
error: use of undeclared identifier "folly"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42583/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20785/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
